--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -20,5 +20,8 @@ jobs:
           # Your ML workflow goes here
           pip install -r requirements.txt
           python model.py
+          
+          cat metrics.txt >> report.md
+          cml comment create report.md
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
