--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,29 +1,18 @@
 name: mlops-ci-tf-regression
 on: [push]
 jobs:
-  run:
+  train-and-report:
     runs-on: ubuntu-latest
-    # optionally use a convenient Ubuntu LTS + DVC + CML image
-    container: ghcr.io/iterative/cml:0-dvc2-base1
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-      # may need to setup NodeJS & Python3 on e.g. self-hosted
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16'
-      # - uses: actions/setup-python@v4
-      #   with:
-      #     python-version: '3.x'
-      - uses: iterative/setup-cml@v1
-      - name: Train model
-        env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Your ML workflow goes here
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - run: |
           pip install -r requirements.txt
-          python model.py
-          
+          python model.py  # generate plot.png
+          # Create CML report
           cat metrics.txt >> report.md
           cml comment create report.md
-        
-          
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
