--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -6,9 +6,12 @@ jobs:
     container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - run: |
           pip install -r requirements.txt
           python model.py 
+          
           # Create CML report
           cat metrics.txt >> report.md
           cml comment create report.md
