--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -6,12 +6,12 @@ jobs:
     container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
+      - uses: iterative/setup-cml@v1
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - run: |
           pip install -r requirements.txt
-          python model.py 
-          
+          python model.py  
           # Create CML report
           cat metrics.txt >> report.md
           cml comment create report.md
