--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,18 +1,18 @@
 name: mlops-ci-tf-regression
 on: [push]
 jobs:
-  run:
+  train-and-report:
     runs-on: ubuntu-latest
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-      - uses: iterative/setup-cml@v1
-      - name: Train model
-        env:
-          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
+        with:
+          ref: ${{ github.event.pull_request_target.head.sha }}
+      - run: |
           pip install -r requirements.txt
-          python model.py
-
+          python model.py  
+          # Create CML report
           cat metrics.txt >> report.md
           cml comment create report.md
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
