--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request_target.head.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
       - run: |
           pip install -r requirements.txt
           python model.py  
